# windcdf-qc

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  qc_check_proposal.yml
.github/workflows/: ci.yml  lint.yml
benchmarks/: README.md  bench_engine.py
configs/: windcdf.default.yml
configs/examples/: minimal.yml  offshore_site.yml  onshore_site.yml
docs/: index.md  installation.md  quickstart.md
docs/dev/: architecture.md  release_process.md
docs/qc/: checks_catalog.md  flags_and_severity.md  overview.md  variable_conventions.md
docs/qc/discussions/: 0001-range-checks.md  0002-spike-detection.md  0003-stuck-sensor.md  0004-wind-direction-wrap.md  README.md
docs/qc/examples/: sensor_freeze.md  suspicious_gaps.md  unrealistic_ramps.md
docs/user_guide/: cli.md  gui.md  workflows.md
examples/datasets/: .gitkeep
examples/notebooks/: .gitkeep
examples/scripts/: export_flags_csv.py  run_qc_batch.py
papers_or_specs/: qc_background.md  references.bib
src/: System Prompt — WindCDF Interactive QC.md
src/windcdf/: __init__.py  __main__.py  datamanager.py  panel_settings.py  selection_dialog.py  settings.yaml  windcdf_gui.py
src/windcdf/cli/: __init__.py  main.py
src/windcdf/gui/: __init__.py  app.py  state.py
src/windcdf/io/: __init__.py  conventions.py  reader.py  writer.py
src/windcdf/models/: __init__.py  (+3 more)
tests/: conftest.py  test_checks_range.py  test_checks_spike.py  test_engine.py  test_gui_smoke.py  test_io_reader.py
tests/data/: .gitkeep
(+40 files in other folders)
